--- a/experiments/theme/public/index.html
+++ b/experiments/theme/public/index.html
@@ -13,7 +13,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Experiment 16 - Theme</title>
+    <title>Theme Experiment</title>
   </head>
   <body>
     <div id="root"></div>
