--- a/experiments/framework_decoupled_v3/public/200.html
+++ b/experiments/framework_decoupled_v3/public/200.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900" rel="stylesheet">
+    <link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css">
+    <script src="https://cloud.tinymce.com/stable/tinymce.min.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
