--- a/experiments/framework_decoupled_v3/public/index.html
+++ b/experiments/framework_decoupled_v3/public/index.html
@@ -12,7 +12,10 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900" rel="stylesheet">
     <link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css">
     <title>Framework decoupled</title>
-  
+    <style>
+      /* html { font-size: 62.5%; } */
+      /* * { outline: none; box-sizing: border-box; } */
+    </style>
   </head>
     <body style="margin:0 auto">
       
