outline + box-sizing defaults

--- a/experiments/framework_decoupled_v3/public/index.html
+++ b/experiments/framework_decoupled_v3/public/index.html
@@ -14,7 +14,7 @@
     <title>Framework decoupled</title>
     <style>
       /* html { font-size: 62.5%; } */
-      /* * { outline: none; box-sizing: border-box; } */
+      * { outline: none; box-sizing: border-box; }
     </style>
   </head>
     <body style="margin:0 auto">
