--- a/experiments/framework_decoupled_v3/public/index.html
+++ b/experiments/framework_decoupled_v3/public/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css">
     <title>Framework decoupled</title>
     <style>
-      /* html { font-size: 62.5%; } */
+      html { font-size: 62.5%; }
       * { outline: none; box-sizing: border-box; }
     </style>
   </head>
