--- a/experiments/framework_decoupled_v3/public/200.html
+++ b/experiments/framework_decoupled_v3/public/200.html
@@ -1,14 +1,18 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css">
-    <title>Framework decoupled</title>
-  </head>
-  <body style="margin:0 auto">
-    <div id="root"></div>
-  </body>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="theme-color" content="#000000">
+
+	<link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+	<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900" rel="stylesheet">
+	<link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css">
+	<title>Framework decoupled</title>
+</head>
+<body>
+	<div id="root"></div>
+</body>
 </html>
