--- a/experiments/framework_decoupled_v3/public/index.html
+++ b/experiments/framework_decoupled_v3/public/index.html
@@ -8,7 +8,9 @@
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 	<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 	
-	<link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css">
+	<!-- <link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css"> -->
+	<script src="https://cloud.tinymce.com/stable/tinymce.min.js"></script>
+	
 	<title>Framework decoupled</title>
 </head>
 <body>
