Re-added TinyMCE APIKey and readded normalize and typeface

--- a/experiments/framework_decoupled_v3/public/index.html
+++ b/experiments/framework_decoupled_v3/public/index.html
@@ -9,7 +9,7 @@
 	<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 	
 	<!-- <link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css"> -->
-	<script src="//cdn.tinymce.com/4/tinymce.min.js"></script>
+	<script src="https://cloud.tinymce.com/stable/tinymce.min.js?apiKey=qta64i3m0zud09mnrgsyrw2d0v0slsf79a0dit27os5cxjqu"></script>
 	
 	<title>Framework decoupled</title>
 </head>
