--- a/experiments/framework_decoupled_v3/public/200.html
+++ b/experiments/framework_decoupled_v3/public/200.html
@@ -9,7 +9,7 @@
 	<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
 	<link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css">
-	<title>Framework decoupled</title>
+	<title>ODEUM ePlan</title>
 </head>
 <body>
 	<div id="root"></div>
