--- a/experiments/framework_decoupled_v3/public/index.html
+++ b/experiments/framework_decoupled_v3/public/index.html
@@ -11,7 +11,7 @@
 	<!-- <link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css"> -->
 	<script src="//cdn.tinymce.com/4/tinymce.min.js"></script>
 	
-	<title>Framework decoupled</title>
+	<title>ODEUM ePlan</title>
 </head>
 <body>
 	<div id="root"></div>
