--- a/experiments/framework_decoupled_v3/public/200.html
+++ b/experiments/framework_decoupled_v3/public/200.html
@@ -8,7 +8,7 @@
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 	<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
-	<link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css">
+	<!-- <link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css"> -->
 	<title>ODEUM ePlan</title>
 </head>
 <body>
