--- a/experiments/framework_decoupled_v3/public/200.html
+++ b/experiments/framework_decoupled_v3/public/200.html
@@ -8,7 +8,10 @@
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 	<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900" rel="stylesheet">
 	<!-- <link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css"> -->
+	<script src="//cdn.tinymce.com/4/tinymce.min.js"></script>
+
 	<title>ODEUM ePlan</title>
 </head>
 <body>
